Responsive: fixed problems on small displays

--- a/src/app/about-section/about-section.component.scss
+++ b/src/app/about-section/about-section.component.scss
@@ -25,6 +25,7 @@
     padding-left: 300px;
     padding-right: 300px;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .about-img {
