--- a/src/app/contact-section/contact-section.component.scss
+++ b/src/app/contact-section/contact-section.component.scss
@@ -1,4 +1,6 @@
-.contact-section {
+.contact-section { 
+    display: flex;
+    justify-content: space-between;
     height: 84vh;
     width: 100%;
     padding-top: 84px;
@@ -7,8 +9,7 @@
     background-color: rgb(33, 33, 34);
     font-size: 19px;
     box-sizing: border-box;
-    display: flex;
-    justify-content: space-between;
+    overflow: hidden;
 }
 
 .contact-text-container {
